navbar work, add png type

--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="media/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <meta name="keywords" content="Own Me, Ethereum, NFT, Crypto, Fans, Collectors"/>
-    <meta name="description" content="Buy, trade, sell, view and promote your hottest digital assets as NFTs"/>
+    <meta name="keywords" content="Own Me, Ethereum, NFT, Crypto, Fans, Collectors" />
+    <meta name="description" content="Buy, trade, sell, view and promote your hottest digital assets as NFTs" />
     <style>
         html,
-        body {
+        body,
+        #react-container {
             margin: 0;
+            height: 100%;
+            width: 100%;
         }
 
         ::-webkit-scrollbar {
