setup login form inputs

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             margin: 0;
             height: 100%;
             width: 100%;
+            background-color: rgb(54, 54, 54);
+            color: white;
         }
 
         ::-webkit-scrollbar {
