change app background color

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             margin: 0;
             height: 100%;
             width: 100%;
-            background-color: rgb(54, 54, 54);
+            background-color: rgb(255 246 254);
             color: white;
         }
 
