app layout fixes and scrollbar changes

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             width: 100%;
             background-color: rgb(255 246 254);
             color: white;
+            overflow: hidden;
         }
 
         ::-webkit-scrollbar {
