add nft router link, fix base url

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="keywords" content="Own Me, Ethereum, NFT, Crypto, Fans, Collectors" />
     <meta name="description" content="Buy, trade, sell, view and promote your hottest digital assets as NFTs" />
+    <base href="/">
     <style>
         html,
         body,
