user-select: none

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             background-color: rgb(255 250 254);
             color: white;
             overflow: hidden;
+            user-select: none;
         }
 
         ::-webkit-scrollbar {
